--- a/templates/base.html
+++ b/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>FreshMarket</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}?v=fix1">
     <link rel="stylesheet" href="{{ url_for('static', filename='new_features.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='accessibility.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='animations.css') }}">
